[gd_scene load_steps=4 format=3 uid="uid://dh3ln04ijax8n"]

[ext_resource type="Script" uid="uid://cp6rel80asg6b" path="res://Scripts/PlayerCharacter/UI/PauseMenuScript.gd" id="1_oxp60"]
[ext_resource type="FontFile" uid="uid://8fws2xig8hap" path="res://Assets/RobotoMono-VariableFont_wght.ttf" id="2_erykl"]
[ext_resource type="PackedScene" uid="uid://bdhpuj7itpv6j" path="res://Scenes/OptionsMenuScene.tscn" id="3_0w74v"]

[node name="PauseMenu" type="CanvasLayer" node_paths=PackedStringArray("optionsMenu")]
script = ExtResource("1_oxp60")
optionsMenu = NodePath("OptionsMenu")

[node name="PanelContainer2" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer2"]
custom_minimum_size = Vector2(700, 600)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer2/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="PausedLabel" type="Label" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_erykl")
theme_override_font_sizes/font_size = 50
text = "THE GRAND GREATEST GAME IS PAUSEED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="ResumeButton" type="Button" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_erykl")
theme_override_font_sizes/font_size = 55
text = "KEEP PLAYING"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="OptionsButton" type="Button" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_erykl")
theme_override_font_sizes/font_size = 55
text = "START AGAIN"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="QuitButton" type="Button" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_erykl")
theme_override_font_sizes/font_size = 55
text = "CHICKEN OUT"

[node name="OptionsMenu" parent="." node_paths=PackedStringArray("pauseMenu") instance=ExtResource("3_0w74v")]
pauseMenu = NodePath("..")

[connection signal="pressed" from="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
